@@ -17,38 +17,30 @@
           </div>
     </div>
 </div>
-<div id="profileDetails" class="row">
-<div class="col-md-3">
-      <div class="card">
-        <div class="card-header bg-info" role="tab" id="profilesActionHeading">
-          <h5>
-            <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#profileActions" aria-expanded="true" aria-controls="profileActions">
-              Actions
-              <i class="fas fa-edit float-right"></i>
-            </a>
-          </h5>
-        </div>
-        <div id="profileActions" class="collapse show" role="tabpanel" aria-labelledby="profilesActionHeading">
-          <div class="card-block bg-dark table-responsive">
-              <div id="collapseOne" class="collapse in show" role="tabpanel" >
-                <div class="card-block">
-                    <button class="btn btn-block btn-primary" id="copyProfile">
-                        Copy
-                    </button>
-                    <button class="btn btn-block btn-warning" id="renameProfile">
-                        Rename
-                    </button>
-                    <button class="btn btn-block btn-danger" id="deleteProfile">
-                        Delete
-                    </button>
-                    <hr/>
-                </div>
+<div id="profileDetails">
+    <div class="row border-bottom">
+        <div class="col-md-12">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2">
+            <h4 id="profileNameTitle"> <u>
+            </u></h4>
+            <div class="btn-toolbar float-right">
+              <div class="btn-group mr-2">
+                  <button class="btn btn-primary" id="copyProfile">
+                      Copy
+                  </button>
+                  <button class="btn btn-warning" id="renameProfile">
+                      Rename
+                  </button>
+                  <button class="btn btn-danger" id="deleteProfile">
+                      Delete
+                  </button>
               </div>
-          </div>
+            </div>
+            </div>
         </div>
-      </div>
-</div>
-<div class="col-md-6">
+    </div>
+    <div class="row mt-2">
+<div class="col-md-4">
       <div class="card">
         <div class="card-header bg-info" role="tab" id="profileDevicesHeading">
           <h5>
@@ -74,31 +66,33 @@
         </div>
       </div>
       <br/>
-      <div class="card">
-        <div class="card-header bg-info" role="tab" id="configDeviceCardHeading">
-          <h5>
-            <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#configDeviceCard" aria-expanded="true" aria-controls="configDeviceCard">
-              Configuration
-              <i class="fas fa-cogs float-right"></i>
-            </a>
-          </h5>
-        </div>
+</div>
+<div class="col-md-5">
+    <div class="card">
+      <div class="card-header bg-info" role="tab" id="configDeviceCardHeading">
+        <h5>
+          <a class="text-white" data-toggle="collapse" data-parent="#accordion" href="#configDeviceCard" aria-expanded="true" aria-controls="configDeviceCard">
+            Configuration
+            <i class="fas fa-cogs float-right"></i>
+          </a>
+        </h5>
+      </div>
 
-        <div id="configDeviceCard" class="collapse show" role="tabpanel" aria-labelledby="configDeviceCardHeading">
-          <div class="card-block bg-dark table-responsive">
-              <table class="table table-dark table-striped" id="profile-configData">
-                    <thead class="thead-inverse">
-                        <tr>
-                            <th> Key </th>
-                            <th> Value </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-              </table>
-          </div>
+      <div id="configDeviceCard" class="collapse show" role="tabpanel" aria-labelledby="configDeviceCardHeading">
+        <div class="card-block bg-dark table-responsive">
+            <table class="table table-dark table-striped" id="profile-configData">
+                  <thead class="thead-inverse">
+                      <tr>
+                          <th> Key </th>
+                          <th> Value </th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+            </table>
         </div>
       </div>
+    </div>
 </div>
 <div class="col-md-3">
       <div class="card">
@@ -116,7 +110,6 @@
               <table class="table table-bordered table-dark" id="profile-usedByData">
                     <thead class="thead-inverse">
                         <tr>
-                            <th> Counter </th>
                             <th> Name </th>
                         </tr>
                     </thead>
@@ -126,6 +119,7 @@
           </div>
         </div>
       </div>
+</div>
 </div>
 </div>
 </div>
@@ -206,15 +200,23 @@ function viewProfile(profileId, hostAlias, hostId){
     let details = profileData[hostAlias].profiles[profileId].details;
     let deviceTableRows = createTableRowsHtml(details.devices);
 
+
+    $("#profileNameTitle").text(profileId);
+
     addBreadcrumbs(["Profiles", hostAlias, profileId], ["viewProfiles", "", "active"], false);
 
-    let usedBy = [{empty: "Couldn't get profiles uesd by (api version probably)"}];
+    let usedBy = ["Couldn't get profiles uesd by (api version probably)"];
 
     if(details.hasOwnProperty("used_by")){
         usedBy = details.used_by;
     }
 
-    let profileUsedByHtml = createTableRowsHtml(usedBy);
+    let profileUsedByHtml = "";
+
+    $.each(usedBy, function(_, instance){
+        profileUsedByHtml += `<tr><td>${instance}</td></tr>`;
+    })
+
     let configTr = createTableRowsHtml(details.config);
 
     let collpaseDetailsFunc = $.isEmptyObject(details.devices) ? "hide" : "show";
