@@ -14,6 +14,7 @@ Added
 
 Changed
     Indicate cluster groups & standalone hosts on dashboard (#150)
+    Updated the profile view
 
 Fixed
     Cant create a container with no devices (#158)
